--- a/playbooks/roles/app/templates/nginx-app.j2
+++ b/playbooks/roles/app/templates/nginx-app.j2
@@ -18,6 +18,11 @@ server {
     {% endif %}
     include snippets/ssl-params.conf;
 
+    {% if app.basic_auth is defined %}
+    auth_basic "Restricted Access";
+    auth_basic_user_file /etc/nginx/htpasswd/{{app.app_id}}.htpasswd;
+    {% endif %}
+
     root /var/www/{{app.app_id}}/current/public;
     index index.php index.html;
 
@@ -25,6 +30,7 @@ server {
 
     location ~ /.well-known {
         # Letsencrypt challenge
+        auth_basic off;
         root /var/www/{{app.app_id}};
         allow all;
     }
