ansible: fix nginx-app template

--- a/playbooks/roles/app/templates/nginx-app.j2
+++ b/playbooks/roles/app/templates/nginx-app.j2
@@ -37,8 +37,8 @@ server {
 
     location / {
         # First attempt to serve request as file, then as directory,
-        # then index.php, then fall back to displaying a 404.
-        try_files $uri $uri/ /index.php?$query_string =404;
+        # then index.php.
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
