ansible: add app.debug setting

--- a/playbooks/roles/app/templates/env.j2
+++ b/playbooks/roles/app/templates/env.j2
@@ -1,7 +1,7 @@
 APP_NAME='{{app.app_name}}'
 APP_ENV=production
 APP_KEY='{{app.app_key}}'
-APP_DEBUG=false
+APP_DEBUG={{app.debug}}
 APP_LOG=daily
 APP_LOG_LEVEL=info
 APP_URL='https://{{app.app_domain[0]}}'
