ci: run javascript lint

--- a/playbooks/roles/app/templates/post-receive.j2
+++ b/playbooks/roles/app/templates/post-receive.j2
@@ -38,7 +38,7 @@ composer install --no-dev
 echo "=== PHP dependencies installed"
 yarn
 echo "=== Javascript dependencies installed"
-yarn run production
+yarn run build
 echo "=== Javascript bundle completed"
 rm -rf "$RELEASE_PATH/storage"
 ln -snf "$STORAGE_PATH" "$RELEASE_PATH/storage"
