view: namespace CSS to avoid conflict

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -1,4 +1,6 @@
 @import "./_variables.scss";
 @import "~bulma";
 @import "~font-awesome/scss/font-awesome.scss";
+
 @import "./landing.scss";
+@import "./_utils.scss";
