misc: remove brackground image

--- a/resources/assets/css/landing.scss
+++ b/resources/assets/css/landing.scss
@@ -1,7 +1,6 @@
 #landing .is-dark {
   background-image: linear-gradient(rgba(#114b5f, 0.6),rgba(#1a936f, 0.6)),
-    linear-gradient(rgba(#000000, 0.7),rgba(#000000, 0.7)),
-    url('../media/landing.jpg');
+    linear-gradient(rgba(#000000, 0.7),rgba(#000000, 0.7));
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
