--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -37,6 +37,12 @@
   margin: auto;  /* Magic! */
 }
 
+textarea {
+    resize: vertical;
+    min-height: 80px;
+    max-height: 300px;
+}
+
 // html, body {
 //     height: 100%;
 //     overflow: hidden;
