--- a/playbooks/roles/app/templates/post-receive.j2
+++ b/playbooks/roles/app/templates/post-receive.j2
@@ -46,7 +46,7 @@ php artisan storage:link
 echo "=== Link storage/"
 php artisan optimize
 php artisan config:cache
-#php artisan route:cache
+php artisan route:cache
 echo "=== Optimization completed"
 php artisan migrate --force
 echo "=== Migration completed"
