css: quick workaround to lock objectif in the list

--- a/resources/assets/css/objectif.scss
+++ b/resources/assets/css/objectif.scss
@@ -10,10 +10,15 @@
   
     width: 33%;
      padding: 10px;
+    
 }
 
 
 .board-objectif {
     margin: 10px;
     padding: 10px;
+}
+.element:nth-child(n+3) {
+   opacity: 1;
+   pointer-events:none;
 }
