ansible: define MONGODB_DATABASE

--- a/playbooks/roles/app/templates/env.j2
+++ b/playbooks/roles/app/templates/env.j2
@@ -13,6 +13,8 @@ DB_DATABASE='{{app.app_db.name}}'
 DB_USERNAME='{{app.app_db.user}}'
 DB_PASSWORD='{{app.app_db.password}}'
 
+MONGODB_DATABASE='{{app.app_db.name}}'
+
 CACHE_DRIVER=redis
 CACHE_PREFIX={{app.app_id}}
 
