--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -25,16 +25,28 @@
     font-weight: bold;
 }
 
-.parent {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+.load-board-modal {
+    .parent {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 
-.child {
-  width: 200px;  /* Or whatever */
-  height: 200px; /* Or whatever */
-  margin: auto;  /* Magic! */
+    .box {
+        margin: auto;
+        margin-bottom: 20px;
+
+        .image {
+            width: 200px;  /* Or whatever */
+            height: 200px; /* Or whatever */
+            margin: auto;  /* Magic! */
+            margin-bottom: 10px;
+        }
+    }
+
+    .box-is-active {
+        box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 2px #1a936f
+    }
 }
 
 textarea {
