js: add progress bar

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -135,7 +135,6 @@ textarea {
     max-height: 300px;
 }
 
-
 .board-title {
     width: 20%;
     padding: 5px;
@@ -167,8 +166,9 @@ textarea {
     left: 0px;
 }
 
-
-
+.level-profile {
+    margin-top: 10px;
+}
 .profile {
   .image-is-centered {
     margin-bottom: 10px;
