change box containing board/element and add button to edit the board

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -179,6 +179,10 @@ textarea {
   margin-left: auto;
 }
 
+.has-margin {
+    margin: 5px;
+}
+
 // html, body {
 //     height: 100%;
 //     overflow: hidden;
