board: add context menu

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -140,6 +140,13 @@ textarea {
     padding: 5px;
 }
 
+.board-context-menu {
+    padding: 4px;
+
+    a {
+        margin: 2px;
+    }
+}
 
 .on-canvas
 {
