--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -192,6 +192,9 @@ textarea {
     margin: 5px;
 }
 
+.checkbox {
+    margin-right: 5px;
+}
 // html, body {
 //     height: 100%;
 //     overflow: hidden;
