add tab for general info update for the name works

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -199,6 +199,9 @@ textarea {
     margin: 5px;
 }
 
+.checkbox {
+    margin-right: 5px;
+}
 // html, body {
 //     height: 100%;
 //     overflow: hidden;
