--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -21,6 +21,13 @@
     min-height: 75px;
 }
 
+.nav-item-home-login {
+    a {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+
 .palette {
 
     top: 85%;
