palette: display select component

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -48,6 +48,10 @@
         margin: 1px;
     }
 
+    .component-name {
+        margin-bottom: 5px; 
+    }
+
     .box {
         padding: 1px;
         margin: auto;
