objectif: add quickview to show list objectif

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -1,5 +1,6 @@
 @import "./_variables.scss";
 @import "~bulma";
+@import "~bulma-quickview/quickview";
 @import "~font-awesome/scss/font-awesome.scss";
 
 @import "./landing.scss";
