objectif: * add bulma-ribbon to display score 	  * add simple calculation of the score (if user does not remove any 	    element) 	  * add logic to update score (action,reducer and controller)

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -1,6 +1,7 @@
 @import "./_variables.scss";
 @import "~bulma";
 @import "~bulma-quickview/quickview";
+@import "~bulma-ribbon/ribbon";
 @import "~font-awesome/scss/font-awesome.scss";
 
 @import "./landing.scss";
