objectif: improve style

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -247,3 +247,15 @@ textarea {
     pointer-events: none;
     cursor: default;
 }
+
+.redCell {
+    background-color: #CD5C5C;
+}
+
+.headerCell {
+    background-color: #f2f2f2;
+}
+
+.marginForRibbon {
+    margin-right: 35px
+}
