feature: redesign board and component tabs in profile

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -259,3 +259,24 @@ textarea {
 .marginForRibbon {
     margin-right: 35px
 }
+
+.list-element-profile {
+    .parent {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+     .box {
+        margin: auto;
+        margin-bottom: 20px;
+
+        .image {
+            width: 200px;  /* Or whatever */
+            height: 200px; /* Or whatever */
+            margin: auto;  /* Magic! */
+            margin-bottom: 10px;
+        }
+    }
+    
+}
