community: start to design page listing all the shared components

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -260,7 +260,7 @@ textarea {
     margin-right: 35px
 }
 
-.list-element-profile {
+.list-elements {
     .parent {
         display: flex;
         flex-direction: row;
@@ -278,5 +278,8 @@ textarea {
             margin-bottom: 10px;
         }
     }
-    
 }
+
+.title-community, .list-shared-component {
+    margin-top: 25px
+ }
