community: handle if a component is already imported or if it can be shared

--- a/resources/assets/css/app.scss
+++ b/resources/assets/css/app.scss
@@ -283,3 +283,8 @@ textarea {
 .title-community, .list-shared-component {
     margin-top: 25px
  }
+
+ .component-already-imported {
+    pointer-events: none;
+    cursor: default;
+}
